# TIE-Lang

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README TIE-Lang.md  README.md  pyproject.toml  red_tie.py  tie.py
compiler/: __init__.py  compiler.py  lexer.py  parser.py  run.py
core/: __init__.py  alu.py  red.py  vortice.py
cpu/: __init__.py  cpu.py  instrucciones.py  memoria.py
docs/: alfabeto.md  arquitectura.md  distribution.md  publication_checklist.md  roadmap.md  spec.md
examples/: README.md  busqueda.tie  comparadores.tie  estado_global.tie  fibonacci.tie  funciones.tie
neural/: README.md  __init__.py  perceptron.py  visualization.py
tests/: test_alu.py  test_aritmetica.py  test_cli.py  test_compiler.py  test_cpu.py  test_memoria.py  test_neural.py  test_puertas.py  test_runner.py
